# minidatabase-PP2

./: CMakeLists.txt  README.md
include/: About.h  DB.h  IDE.h  MainMenu.h  Menu.h  Overview.h  Sort.h
src/: About.c  DB.c  MainMenu.c  Menu.c  Overview.c  Sort.c  main.c
